fixing missing ssl in hyperlink for css

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ var message2 = $('#message2').val();
         <script src="assets/js/core.min.js"></script>
     <script src="assets/js/thesaas.min.js"></script>
     <script src="assets/js/script.js"></script>
-  <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	
  <style>
  .slick-slider { display: table; table-layout: fixed; width: 100%; }
